--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "task-tracker",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
